[tool.poetry]
name = "lukim-gather-server"
version = "0.1.0"
description = "\"Lukim gather server\""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.11"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
