[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lukim-gather-server"
version = "0.1.0"
description = "\"Lukim gather server\""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
environs = {version = "^9.4.0", extras = ["django"]}
marshmallow = "^3.14.1"
psycopg2-binary = "^2.9.3"
uvicorn = {version = "^0.16.0", optional = true, extras = ["standard"]}
gunicorn = {version = "^20.1.0", optional = true}
graphene-django = {version = "^3.0.0-beta.7", allow-prereleases = true}
django-filter = "^2.2.0"
django-graphql-jwt = "^0.3.4"
celery = "^5.2.3"
redis = "^4.1.1"
django-modeltranslation = "^0.17.5"
django-ordered-model = "^3.5"
django-ckeditor = "^6.2.0"
django-mptt = "^0.13.4"
django-graphql-geojson = "^0.1.4"
graphene-file-upload = "^1.3.0"
sentry-sdk = "^1.5.8"
djangorestframework = "^3.13.1"
django-admin-autocomplete-filter = "^0.7.1"
djangorestframework-gis = "^0.18"
django-cors-headers = "^3.11.0"
Pillow = "^9.1.0"
graphene-django-extras = "^0.5.2"
django-admin-interface = "^0.19.0"
django-json-widget = "^1.1.1"
django-oauth-toolkit = "^2.0.0"
django-allauth = "^0.50.0"
django-vectortiles = "^0.1.0"
boto3 = "^1.24.42"
django-phonenumber-field = {version = "^6.3.0", extras = ["phonenumbers"]}
watchtower = "^3.0.0"
django-ratelimit = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
safety = "^1.10.3"
django-extensions = "^3.1.5"
pre-commit = "^2.16.0"
model-bakery = "^1.4.0"
Werkzeug = "2.0.0"

[tool.poetry.extras]
asgi = ["uvicorn", "gunicorn"]

[tool.black]
extend-exclude = "migrations/"

[tool.isort]
skip_glob = ["__pycache__", "**/migrations"]
profile = "black"
